--- a/configure.ac
+++ b/configure.ac
@@ -48,7 +48,7 @@ dnl (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 dnl OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 AC_PREREQ(2.63)
-AC_INIT([SOS], 3.3.0, tom@ogc.us)
+AC_INIT([sosdb], 3.3.0, tom@ogc.us)
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR(config)
 AM_CONFIG_HEADER(config.h)
