--- a/rpm/rhel7.spec.in
+++ b/rpm/rhel7.spec.in
@@ -41,6 +41,7 @@
 Name: @PACKAGE_NAME@
 Version: @PACKAGE_VERSION@
 Release: 1%{?dist}
+Obsoletes: SOS
 Summary: Scalable Object Storage
 
 %define _grp Application/Databases
@@ -54,8 +55,8 @@ Prefix: @prefix@
 %define _prefix @prefix@
 
 %description
-Scalable Object Storage (SOS) ...
-
+The Scalable Object Storage (SOS) is a high performance storage engine designed
+to efficiently manage structured data on persistent media.
 
 %prep
 %setup -q
@@ -81,14 +82,15 @@ rm -rf %{buildroot}
 %{_libdir}/libods.*
 %{_libdir}/libsos.*
 %if "@ENABLE_SWIG_TRUE@x" == "x"
-%{_prefix}/lib*/python*/site-packages/sos/
+%{_prefix}/lib*/python*/site-packages/sosdb/
 %endif
 
 
-# SOS-devel package
+# sosdb-devel package
 %package devel
-Summary: Development files for SOS
+Summary: Development files for sosdb
 Group: %{_grp}
+Obsoletes: SOS-devel
 %description devel
 PLACE HOLDER FOR sos-devel DESCRIPTION
 %files devel
@@ -98,12 +100,13 @@ PLACE HOLDER FOR sos-devel DESCRIPTION
 
 
 %if "@ENABLE_DOC_TRUE@x" == "x"
-# SOS-doc package
+# sosdb-doc package
 %package doc
-Summary: SOS documentation
+Summary: sosdb documentation
 Group: %{_grp}
+Obsoletes: SOS-doc
 %description doc
-Documetnation for SOS package.
+Documetnation for sosdb package.
 %files doc
 %defattr(-,root,root)
 %if "@ENABLE_DOC_HTML_TRUE@x" == "x"
@@ -114,23 +117,25 @@ Documetnation for SOS package.
 
 %if "@ENABLE_BWX_TRUE@x" == "x"
 
-# SOS-bwx package
+# sosdb-bwx package
 %package bwx
 Summary: bwx
 Group: %{_grp}
+Obsoletes: SOS-bwx
 %description bwx
-SOS - Blue Water specific package.
+sosdb - Blue Water specific package.
 %files bwx
 %defattr(-,root,root)
 %{_bindir}/bwx_*
 %{_prefix}/lib*/python*/site-packages/bwx/
 
-# SOS-bwx package
+# sosdb-bwx-devel package
 %package bwx-devel
 Summary: bwx-devel
 Group: %{_grp}
+Obsoletes: SOS-bwx-devel
 %description bwx-devel
-Development files for SOS-bwx package.
+Development files for sosdb-bwx package.
 %files bwx-devel
 %defattr(-,root,root)
 %{_includedir}/bwx/
